# services-security

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  Makefile  README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/admin/: security.py
nagare/security/: __init__.py  common.py
nagare/services/security/: basic_auth.py  common.py  cookie_auth.py  digest_auth.py  form_auth.py  oauth_auth.py  oidc_auth.py  token_auth.py
src/nagare/admin/: security.py
src/nagare/security/: __init__.py  common.py  fernet.py
src/nagare/services/: __init__.py
src/nagare/services/security/: basic_auth.py  common.py  cookie_auth.py  digest_auth.py  form_auth.py  jwt_token_auth.py  token_auth.py
tests/: __init__.py  test_permissions.py
