# =-
# (C)opyright Net-ng 2023
#
# This is Net-ng proprietary source code
# Any reproduction modification or use without prior written
# approval from Net-ng is strictly forbidden.
# =-

[build-system]
requires = ['setuptools', 'wheel', 'setuptools_scm']
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]

[project]
name = 'nagare-services-security'
dynamic = ['version', 'entry-points']
description = 'Security service'
authors = [
    {name = 'Net-ng'},
    {email = 'contact@net-ng.com'}
]
license = {file = 'LICENSE.txt'}
requires-python = '>=3.7'
dependencies = [
    'cryptography',
    'nagare-services',
    'nagare-services-logging',
    'nagare-server-http'
]

[project.readme]
file = 'README.rst'
content-type = 'text/x-rst'

[tool.setuptools.dynamic]
entry-points = {file = 'entry-points.txt'}

[project.optional-dependencies]
dev = [
    'sphinx',
    'sphinx_rtd_theme',
    'pre-commit',
    'ruff',
    'pytest',
    'build',
    'twine'
]

[project.urls]
Homepage = 'https://nagare.org'
Documentation = 'https://nagare.org/doc'
Source = 'https://github.com/nagareproject/services-security'
Tracker = 'https://github.com/nagareproject/services-security/issues'

[tool.distutils.bdist_wheel]
universal = true

[tool.ruff]
select = ['C4', 'COM', 'D', 'E', 'ERA', 'F', 'I', 'ISC', 'INP', 'PIE', 'Q', 'S', 'TID', 'W', 'YTT']
ignore = ['COM812', 'D10', 'D401', 'E501', 'ISC001']
line-length = 120
src = ['src']
exclude = ['src/nagare/services/security/jwt_token_auth.py']

[tool.ruff.per-file-ignores]
'src/nagare/services/security/digest_auth.py' = ['S324']

[tool.ruff.flake8-quotes]
inline-quotes = 'single'

[tool.ruff.pydocstyle]
convention = 'google'

[tool.ruff.isort]
known-third-party = ['nagare']
length-sort = true

[tool.ruff.format]
quote-style = 'single'

[tool.pytest.ini_options]
testpaths = ['tests']
