# =-
# (C)opyright Net-ng 2008-2024
#
# This is Net-ng proprietary source code
# Any reproduction modification or use without prior written
# approval from Net-ng is strictly forbidden.
# =-

[build-system]
requires = ['setuptools', 'wheel', 'setuptools_scm']
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]

[project]
name = 'nagare-services-security'
dynamic = ['version', 'entry-points']
description = 'Security service'
authors = [
    {name = 'Net-ng'},
    {email = 'contact@net-ng.com'}
]
license = {file = 'LICENSE.txt'}
requires-python = '>=3.7'
dependencies = [
    'tinyaes',
    'nagare-services',
    'nagare-services-logging',
    'nagare-server-http'
]

[project.readme]
file = 'README.rst'
content-type = 'text/x-rst'

[tool.setuptools.dynamic]
entry-points = {file = 'entry-points.txt'}

[project.optional-dependencies]
dev = [
    'sphinx',
    'sphinx_rtd_theme',
    'pre-commit',
    'ruff',
    'pytest',
    'twine'
]

[project.urls]
Homepage = 'https://nagare.org'
Documentation = 'https://nagare.org/doc'
Source = 'https://github.com/nagareproject/services-security'
Tracker = 'https://github.com/nagareproject/services-security/issues'

[tool.ruff]
src = ['src']
line-length = 120
format.quote-style = 'single'

[tool.ruff.lint]
select = ['C4', 'COM', 'D', 'E', 'ERA', 'F', 'I', 'ISC', 'INP', 'PIE', 'Q', 'S', 'TID', 'W', 'YTT']
ignore = ['COM812', 'D10', 'D401', 'E501', 'ISC001']
exclude = ['src/nagare/services/security/jwt_token_auth.py']
pydocstyle.convention = 'google'
flake8-quotes.inline-quotes = 'single'

[tool.ruff.lint.isort]
length-sort = true
section-order = ['future', 'standard-library', 'third-party', 'first-party', 'local-folder']

[tool.pytest.ini_options]
testpaths = ['tests']

