[metadata]
name = nagare-services-security
author = Net-ng
author_email = alain.poirier@net-ng.com
description = Security service
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/services-security
    Tracker = https://github.com/nagareproject/services-security/issues

[options]
zip_safe = False
packages = find:
install_requires =
    cryptography
    nagare-services
    nagare-services-logging
    nagare-server-http

[options.entry_points]
nagare.commands =
    key = nagare.admin.security:Key

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
